Edited the dependencies to resolve a few errors
-Edited and kept only the JAVAFX dependencies for mac